--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-google-maps": "^9.4.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
